--- a/hildon/Makefile.am
+++ b/hildon/Makefile.am
@@ -28,7 +28,10 @@ libhildon_gtk_@API_VERSION_MAJOR@_la_SOURCES = \
 		hildon-gtk-window.c		\
 		hildon-gtk-entry.c		\
 		hildon-gtk-treeview.c		\
-		hildon-gtk-textview.c
+		hildon-gtk-textview.c		\
+		hildon-gtk-imcontext.c		\
+		hildon-gtk-dialog.c		\
+		hildon-gtk-widget.c
 
 libhildon_gtk_@API_VERSION_MAJOR@_includedir = \
 		$(includedir)/$(PACKAGE)-$(API_VERSION_MAJOR)/$(PACKAGE)
@@ -225,7 +228,7 @@ noinst_HEADERS = hildon-calendar-popup-private.h 	\
 		hildon-touch-selector-private.h
 
 # Don't build the library until we have built the header that it needs:
-$(OBJECTS) $(libhildon_$(API_VERSION_MAJOR)_la_OBJECTS): hildon-enum-types.h hildon-marshalers.c hildon-marshalers.h
+$(OBJECTS) $(libhildon_$(API_VERSION_MAJOR)_la_OBJECTS) $(libhildon_gtk_$(API_VERSION_MAJOR)_la_OBJECTS): hildon-enum-types.h hildon-marshalers.c hildon-marshalers.h
 
 hildon-enum-types.h: @REBUILD@ $(libhildon_$(API_VERSION_MAJOR)_public_headers) Makefile
 	(cd $(srcdir) && glib-mkenums 	\
