--- a/debian/control
+++ b/debian/control
@@ -2,25 +2,51 @@ Source: libhildon
 Section: x11
 Priority: optional
 Maintainer: Claudio Saavedra <csaavedra@igalia.com>
-Build-Depends: debhelper (>= 9.20160114), libtool-bin, cdbs, libgtk2.0-dev, libcanberra-dev, libxi-dev, libxt-dev, libpng-dev, libgconf2-dev, gtk-doc-tools, libgtk2.0-doc, libglib2.0-doc
+Build-Depends:
+ debhelper (>= 9.20160114),
+ libtool-bin,
+ cdbs,
+ libgtk2.0-dev,
+ libcanberra-dev,
+ libxi-dev,
+ libxt-dev,
+ libpng-dev,
+ libgconf2-dev,
+ gtk-doc-tools,
+ libgtk2.0-doc,
+ libglib2.0-doc,
 Standards-Version: 3.6.0
 
 Package: libhildon1-dev
 Section: devel
 Architecture: any
-Depends: ${misc:Depends}, libhildon1 (= ${binary:Version}), pkg-config, libgtk2.0-dev, libgconf2-dev, libcanberra-dev
+Depends:
+ ${misc:Depends},
+ libhildon1 (= ${binary:Version}),
+ pkg-config,
+ libgtk2.0-dev,
+ libgconf2-dev,
+ libcanberra-dev,
 Description: Hildon libraries development files
 
 Package: libhildon1
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, osso-sounds-ui, hildon-libs-l10n-mr | hildon-libs-l10n-mr0, osso-system-lock-l10n-mr | osso-system-lock-l10n-mr0, hildon-fm-l10n-mr | hildon-fm-l10n-mr0
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+ osso-sounds-ui,
+ hildon-libs-l10n-mr | hildon-libs-l10n-mr0,
+ osso-system-lock-l10n-mr | osso-system-lock-l10n-mr0,
+ hildon-fm-l10n-mr | hildon-fm-l10n-mr0,
 Description: Hildon libraries
 
 Package: libhildon1-examples
 Section: doc
 Architecture: all
-Depends: ${misc:Depends}, libhildon1-dev (>= ${binary:Version})
+Depends:
+ ${misc:Depends},
+ libhildon1-dev (>= ${binary:Version})
 Description: Examples source file for hildon libraries
 
 Package: libhildon1-doc
@@ -29,4 +55,3 @@ Architecture: all
 Depends: ${misc:Depends}, lynx | www-browser
 Recommends: libgtk2.0-doc
 Description: Hildon libraries documentation
-
