--- a/debian/rules
+++ b/debian/rules
@@ -1,24 +1,10 @@
 #!/usr/bin/make -f
+%:
+	dh $@
 
-include /usr/share/cdbs/1/rules/buildvars.mk
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,--as-needed
 
-ENABLE_GTK_DOC = --enable-gtk-doc
-
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/cdbs/1/rules/utils.mk
-
-DEB_CONFIGURE_SCRIPT_ENV += LDFLAGS="-Wl,-O1 -Wl,--as-needed" PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/share/pkgconfig
-DEB_CONFIGURE_EXTRA_FLAGS := $(ENABLE_GTK_DOC) --enable-maintainer-mode
-DEB_COMPRESS_EXCLUDE := .c
-DEB_DH_MAKESHLIBS_ARGS_libhildon1 := -a -V 'libhildon1 (>= 2.2.22)'
-DEB_INSTALL_CHANGELOGS_libhildon1 := --no-act
-
-config.status: $(DEB_SRCDIR)/configure
-
-makebuilddir/libhildon1::
-	AUTOGEN_SUBDIR_MODE=1 NOCONFIGURE=yes $(DEB_SRCDIR)/autogen.sh
-
-binary-post-install/libhildon1-examples::
-	( cd $(DEB_SRCDIR)/debian/libhildon1-examples/usr/share/doc/libhildon1-examples/examples && \
-	mv Makefile.static Makefile )
+override_dh_auto_configure:
+	dh_auto_configure -- \
+		--enable-maintainer-mode \
+		--enable-gtk-doc
